<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_planner_event"
        android:layout_width="105dp"
        android:layout_height="88dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="200dp"
        android:layout_marginRight="200dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/iv_event_image"
        app:layout_constraintBottom_toTopOf="@+id/tv_planner_movies"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_planner_events"
        app:srcCompat="@android:drawable/progress_indeterminate_horizontal" />

    <TextView
        android:id="@+id/tv_planner_saved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_planner"
        app:layout_constraintBottom_toTopOf="@+id/tv_planner_event_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_planner_event_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_event_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_planner_event"
        app:layout_constraintTop_toTopOf="@+id/iv_planner_event" />

    <TextView
        android:id="@+id/tv_planner_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_location_event"
        app:layout_constraintBottom_toTopOf="@+id/tv_planner_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_planner_event"
        app:layout_constraintTop_toBottomOf="@+id/tv_planner_event_name" />

    <TextView
        android:id="@+id/tv_planner_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_time_event"
        app:layout_constraintBottom_toTopOf="@+id/tv_planner_performers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_planner_event"
        app:layout_constraintTop_toBottomOf="@+id/tv_planner_location" />

    <TextView
        android:id="@+id/tv_planner_performers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_performers"
        app:layout_constraintBottom_toBottomOf="@+id/iv_planner_event"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_planner_event" />

    <TextView
        android:id="@+id/tv_planner_events"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="200dp"
        android:layout_marginRight="200dp"
        android:text="@string/tv_events"
        app:layout_constraintBottom_toTopOf="@+id/iv_planner_event"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_planner_saved"
        app:layout_constraintVertical_bias="0.95" />

    <TextView
        android:id="@+id/tv_planner_movie_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_movie_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_planner_movies"
        app:layout_constraintTop_toTopOf="@+id/iv_planner_movies" />

    <TextView
        android:id="@+id/tv_planner_director"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_director"
        app:layout_constraintBottom_toTopOf="@+id/tv_planner_runtime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_planner_movies"
        app:layout_constraintTop_toBottomOf="@+id/tv_planner_movie_name" />

    <TextView
        android:id="@+id/tv_planner_runtime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_runtime"
        app:layout_constraintBottom_toTopOf="@+id/tv_planner_actors"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_planner_movies"
        app:layout_constraintTop_toBottomOf="@+id/tv_planner_director" />

    <TextView
        android:id="@+id/tv_planner_actors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_actors"
        app:layout_constraintBottom_toBottomOf="@+id/iv_planner_movies"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_planner_movies" />

    <TextView
        android:id="@+id/tv_planner_release_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_release_date"
        app:layout_constraintBottom_toTopOf="@+id/tv_planner_artist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_planner_album"
        app:layout_constraintTop_toBottomOf="@+id/tv_planner_album_name" />

    <TextView
        android:id="@+id/tv_planner_artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_artist"
        app:layout_constraintBottom_toBottomOf="@+id/iv_planner_album"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_planner_album" />

    <TextView
        android:id="@+id/tv_planner_song_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_song_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_planner_album"
        app:layout_constraintTop_toTopOf="@+id/iv_planner_album" />

    <ImageView
        android:id="@+id/iv_planner_movies"
        android:layout_width="105dp"
        android:layout_height="88dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="200dp"
        android:layout_marginRight="200dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/iv_movie_image"
        app:layout_constraintBottom_toTopOf="@+id/textView20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_planner_movies"
        app:srcCompat="@android:drawable/progress_indeterminate_horizontal" />

    <ImageView
        android:id="@+id/iv_planner_album"
        android:layout_width="105dp"
        android:layout_height="88dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="200dp"
        android:layout_marginRight="200dp"
        android:contentDescription="@string/iv_album_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView20"
        app:srcCompat="@android:drawable/progress_indeterminate_horizontal" />

    <TextView
        android:id="@+id/tv_planner_movies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="200dp"
        android:layout_marginRight="200dp"
        android:text="@string/tv_movies"
        app:layout_constraintBottom_toTopOf="@+id/iv_planner_movies"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_planner_event"
        app:layout_constraintVertical_bias="0.95" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="200dp"
        android:layout_marginRight="200dp"
        android:text="@string/tv_music"
        app:layout_constraintBottom_toTopOf="@+id/iv_planner_album"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_planner_movies"
        app:layout_constraintVertical_bias="0.95" />

    <TextView
        android:id="@+id/tv_planner_album_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_album_name"
        app:layout_constraintBottom_toTopOf="@+id/tv_planner_release_date"
        app:layout_constraintEnd_toEndOf="@+id/tv_planner_release_date"
        app:layout_constraintStart_toStartOf="@+id/tv_planner_song_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_planner_song_name" />
</androidx.constraintlayout.widget.ConstraintLayout>