<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/et_searchbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/et_search"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/iv_albumimage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_song_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_event_name"
        app:layout_constraintEnd_toStartOf="@+id/iv_favourites_set"
        app:layout_constraintStart_toEndOf="@+id/iv_albumimage"
        app:layout_constraintTop_toTopOf="@+id/iv_albumimage" />

    <TextView
        android:id="@+id/tv_album_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_location_event"
        app:layout_constraintBottom_toTopOf="@+id/tv_release_date"
        app:layout_constraintEnd_toStartOf="@+id/iv_favourites_set"
        app:layout_constraintStart_toEndOf="@+id/iv_albumimage"
        app:layout_constraintTop_toBottomOf="@+id/tv_song_name" />

    <TextView
        android:id="@+id/tv_release_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_time_event"
        app:layout_constraintBottom_toTopOf="@+id/tv_artist"
        app:layout_constraintEnd_toStartOf="@+id/iv_planner_set"
        app:layout_constraintStart_toEndOf="@+id/iv_albumimage"
        app:layout_constraintTop_toBottomOf="@+id/tv_album_name" />

    <TextView
        android:id="@+id/tv_artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_performers"
        app:layout_constraintBottom_toBottomOf="@+id/iv_albumimage"
        app:layout_constraintEnd_toStartOf="@+id/iv_planner_set"
        app:layout_constraintStart_toEndOf="@+id/iv_albumimage" />

    <ImageView
        android:id="@+id/iv_albumimage"
        android:layout_width="121dp"
        android:layout_height="154dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/iv_event_image"
        app:layout_constraintEnd_toStartOf="@+id/tv_song_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_searchbar"
        app:srcCompat="@android:drawable/progress_indeterminate_horizontal" />

    <ImageView
        android:id="@+id/iv_favourites_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/iv_favourites_image"
        app:layout_constraintBottom_toTopOf="@+id/iv_planner_set"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.649"
        app:layout_constraintStart_toEndOf="@+id/iv_albumimage"
        app:layout_constraintTop_toTopOf="@+id/tv_song_name"
        app:srcCompat="@android:drawable/btn_star_big_off" />

    <ImageView
        android:id="@+id/iv_planner_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/iv_planner_image"
        app:layout_constraintBottom_toBottomOf="@+id/tv_artist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.649"
        app:layout_constraintStart_toEndOf="@+id/iv_albumimage"
        app:layout_constraintTop_toBottomOf="@+id/iv_favourites_set"
        app:srcCompat="@android:drawable/star_big_on" />

    <Button
        android:id="@+id/btn_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_albumimage" />

    <TextView
        android:id="@+id/tv_events"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="3dp"
        android:text="@string/tv_events"
        app:layout_constraintBottom_toTopOf="@+id/et_searchbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>