<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_music"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_music"
        app:layout_constraintBottom_toTopOf="@+id/btn_favourites"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_events"
        app:layout_constraintTop_toBottomOf="@+id/btn_movies" />

    <Button
        android:id="@+id/btn_movies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_movies"
        app:layout_constraintBottom_toTopOf="@+id/btn_events"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_events"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_events"
        app:layout_constraintBottom_toTopOf="@+id/btn_favourites"
        app:layout_constraintEnd_toStartOf="@+id/btn_music"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_movies" />

    <Button
        android:id="@+id/btn_favourites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_favourites"
        app:layout_constraintBottom_toTopOf="@+id/btn_planner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_music" />

    <Button
        android:id="@+id/btn_planner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_planner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_favourites" />
</androidx.constraintlayout.widget.ConstraintLayout>