<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/im_movie_poster"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_movie_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_movies"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/im_movie_poster"
        app:layout_constraintTop_toTopOf="@+id/im_movie_poster"
        tools:text="@string/tv_movies" />

    <TextView
        android:id="@+id/tv_director"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_director"
        app:layout_constraintBottom_toTopOf="@+id/tv_runtime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/im_movie_poster"
        app:layout_constraintTop_toBottomOf="@+id/tv_movie_name"
        tools:text="@string/tv_director" />

    <TextView
        android:id="@+id/tv_runtime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_runtime"
        app:layout_constraintBottom_toTopOf="@+id/tv_actors"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/im_movie_poster"
        app:layout_constraintTop_toBottomOf="@+id/tv_director"
        tools:text="@string/tv_runtime" />

    <TextView
        android:id="@+id/tv_actors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_actors"
        app:layout_constraintBottom_toBottomOf="@+id/im_movie_poster"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/im_movie_poster"
        tools:text="@string/tv_actors" />
</androidx.constraintlayout.widget.ConstraintLayout>